--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,7 +7,7 @@ button {
   outline: none;
   display: none;
   margin-left: auto;
-  @include responsive(phone) {
+  @include responsive(m-phone) {
     display: block;
   }
 }
