add page and changes

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,6 +7,9 @@ button {
   outline: none;
   display: none;
   margin-left: auto;
+  img {
+    background-color: transparent;
+  }
   @include responsive(m-phone) {
     display: block;
   }
