--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 @import "layout/header";
 @import "layout/sidebar";
 @import "layout/home";
+@import "layout/blog";
+@import "layout/workdetail";
 @import "layout/footer";
 @import "components/button";
 @import "components/helpers";
