--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,4 +1,13 @@
 .navbar {
+  @include responsive(m-phone) {
+    background-color: #000;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 100;
+    @include flex;
+  }
   .header__list {
     @include flex;
     justify-content: center;
@@ -10,7 +19,8 @@
       font-size: 2rem;
       color: #000;
       position: relative;
-      &:hover {
+      &:hover,
+      &:active {
         color: $color-primary;
       }
       &::after {
@@ -27,6 +37,20 @@
         width: 100%;
         // background-color: $color-secondary;
       }
+      @include responsive(m-phone) {
+        color: $color-white;
+      }
+    }
+    .active {
+      color: $color-primary;
+    }
+    .active::after {
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: $color-primary;
     }
 
     @include responsive(m-phone) {
