--- a/sass/main.css
+++ b/sass/main.css
@@ -22,6 +22,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  background-color: #e5e5e5;
 }
 
 .container {
@@ -115,6 +116,19 @@ h3 {
   }
 }
 
+@media screen and (max-width: 445px) {
+  .navbar {
+    background-color: #000;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
 .navbar .header__list {
   display: flex;
   align-items: center;
@@ -130,7 +144,7 @@ h3 {
   color: #000;
   position: relative;
 }
-.navbar .header__list a:hover {
+.navbar .header__list a:hover, .navbar .header__list a:active {
   color: #ff6464;
 }
 .navbar .header__list a::after {
@@ -145,6 +159,22 @@ h3 {
 }
 .navbar .header__list a:hover::after {
   width: 100%;
+}
+@media screen and (max-width: 445px) {
+  .navbar .header__list a {
+    color: #fff;
+  }
+}
+.navbar .header__list .active {
+  color: #ff6464;
+}
+.navbar .header__list .active::after {
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #ff6464;
 }
 @media screen and (max-width: 445px) {
   .navbar .header__list {
@@ -164,6 +194,17 @@ h3 {
   max-width: 1000px;
   padding-top: 2.7rem;
   padding-bottom: 2.7rem;
+}
+.header .container .home_button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media screen and (max-width: 445px) {
+  .header .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .hero {
@@ -377,6 +418,104 @@ h3 {
   }
 }
 
+.blog h1 {
+  margin-bottom: 5.5rem;
+}
+@media screen and (max-width: 375px) {
+  .blog h1 {
+    margin-bottom: 1.8rem;
+  }
+}
+.blog__wraper {
+  border-bottom: 1px solid #8695a4;
+  margin-bottom: 3.2rem;
+}
+.blog__wraper .box-text {
+  margin-bottom: 2.9rem;
+}
+@media screen and (max-width: 375px) {
+  .blog__wraper .box-text {
+    margin-bottom: 2.4rem;
+  }
+}
+@media screen and (max-width: 375px) {
+  .blog__wraper {
+    margin-bottom: 1.8rem;
+  }
+}
+
+.site-works h1 {
+  margin-bottom: 2.5rem;
+}
+
+.work__details h1 {
+  font-size: 3.4rem;
+  width: 50.6rem;
+  margin-bottom: 3rem;
+}
+@media screen and (max-width: 670px) {
+  .work__details h1 {
+    width: 100%;
+  }
+}
+.work__details .work__made span {
+  background-color: #ff6464;
+}
+.work__details .work__made p {
+  color: #21243d;
+}
+@media screen and (max-width: 670px) {
+  .work__details .work__made {
+    align-items: flex-start;
+  }
+}
+.work__details .work_text {
+  width: 67.1rem;
+  margin-bottom: 4.6rem;
+}
+@media screen and (max-width: 670px) {
+  .work__details .work_text {
+    width: 100%;
+  }
+}
+.work__details .dashboard-img {
+  width: 68.1rem;
+  height: 46rem;
+  margin-bottom: 5.4rem;
+}
+@media screen and (max-width: 768px) {
+  .work__details .dashboard-img {
+    width: 50rem;
+    height: 38rem;
+    margin-bottom: 3.5rem;
+  }
+}
+@media screen and (max-width: 670px) {
+  .work__details .dashboard-img {
+    width: 40rem;
+    height: 30rem;
+    margin-bottom: 3rem;
+  }
+}
+@media screen and (max-width: 445px) {
+  .work__details .dashboard-img {
+    width: 35.5rem;
+    height: 28rem;
+    margin-bottom: 2.6rem;
+  }
+}
+@media screen and (max-width: 670px) {
+  .work__details .dashboard-img {
+    width: 33.9rem;
+    height: 25.6rem;
+    margin-bottom: 2.3rem;
+  }
+}
+.work__details h3 {
+  font-size: 2.4rem;
+  line-height: 3;
+}
+
 footer {
   padding: 5.1rem 0 5.4rem;
 }
@@ -415,6 +554,9 @@ button {
   outline: none;
   display: none;
   margin-left: auto;
+}
+.toogle_btn img {
+  background-color: transparent;
 }
 @media screen and (max-width: 445px) {
   .toogle_btn {
