--- a/sass/layout/_workdetail.scss
+++ b/sass/layout/_workdetail.scss
@@ -30,23 +30,37 @@
     height: 46rem;
     margin-bottom: 5.4rem;
     @include responsive(tablet) {
+      margin: 0 auto;
       width: 50rem;
+      display: flex;
+
       height: 38rem;
       margin-bottom: 3.5rem;
     }
     @include responsive(work) {
       width: 40rem;
+      margin-left: auto;
+      display: flex;
+      margin-right: auto;
       height: 30rem;
       margin-bottom: 3rem;
     }
     @include responsive(m-phone) {
       width: 35.5rem;
       height: 28rem;
+      margin-left: auto;
+      display: flex;
+
+      margin-right: auto;
       margin-bottom: 2.6rem;
     }
     @include responsive(work) {
       width: 33.9rem;
       height: 25.6rem;
+      margin-left: auto;
+      display: flex;
+
+      margin-right: auto;
       margin-bottom: 2.3rem;
     }
   }
