--- a/sass/layout/_blog.scss
+++ b/sass/layout/_blog.scss
@@ -23,4 +23,11 @@
   h1 {
     margin-bottom: 2.5rem;
   }
+  .img_link {
+    @include responsive(work) {
+      display: flex;
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
 }
