--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -115,6 +115,7 @@
     margin-bottom: 1rem;
     line-height: 2.73;
   }
+
   &__cards-box {
     @include flex;
     align-items: flex-start;
@@ -129,9 +130,15 @@
   &__img {
     width: 246px;
     height: 180px;
+    @include responsive(work) {
+      width: 350px;
+      height: 220px;
+      margin: 0 auto;
+    }
     @include responsive(phone) {
       width: 33.9rem;
       height: 23rem;
+      margin: 0 auto;
     }
   }
   &__wrapper {
